# testing-poetry

./: README.md  pyproject.toml
testing_poetry/: main.py
