[tool.poetry]
name = "testing-poetry"
version = "0.1.0"
description = ""
authors = ["Jeff <jeffersoncandidoeng@gmail.com>"]
readme = "README.md"
packages = [{include = "testing_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"

[tool.poetry.scripts]
testing_poetry = "testing_poetry.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
